--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -24,6 +24,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/infoTextView"
+        android:layout_width="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/sharedTextView"
+        android:layout_marginStart="24dp"
+        app:autoSizeMaxTextSize="14sp"
+        app:autoSizeMinTextSize="12sp"
+        android:textColor="@color/light_grey"
+        android:layout_marginTop="4dp"
+        android:text="@string/post_warning"
+        android:textSize="12sp"
+        app:autoSizeTextType="uniform"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="wrap_content" />
+
     <View
         android:id="@+id/cancelView"
         android:layout_width="32dp"
@@ -42,7 +59,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:text="@string/set_up_category"
         android:textColor="@color/dark_grey"
         android:textSize="16sp"
@@ -51,7 +68,7 @@
         app:autoSizeTextType="uniform"
         app:layout_constraintEnd_toStartOf="@id/categoryCardView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sharedTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/infoTextView" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/categoryCardView"
