--- a/app/src/main/res/layout/item_community.xml
+++ b/app/src/main/res/layout/item_community.xml
@@ -83,35 +83,12 @@
             android:layout_height="16dp"
             android:layout_marginEnd="2dp"
             android:background="@drawable/ic_eye_20"
-            app:layout_constraintBottom_toBottomOf="@id/commentCountTextView"
+            app:layout_constraintBottom_toBottomOf="@id/viewsCountTextView"
             app:layout_constraintEnd_toStartOf="@+id/viewsCountTextView"
-            app:layout_constraintTop_toTopOf="@+id/commentCountTextView" />
+            app:layout_constraintTop_toTopOf="@+id/viewsCountTextView" />
 
         <TextView
             android:id="@+id/viewsCountTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="6dp"
-            android:text="@string/zero"
-            app:autoSizeMaxTextSize="16sp"
-            app:autoSizeMinTextSize="12sp"
-            app:autoSizeTextType="uniform"
-            app:layout_constraintBottom_toBottomOf="@id/titleTextView"
-            app:layout_constraintEnd_toStartOf="@+id/commentIcon"
-            app:layout_constraintTop_toTopOf="@id/titleTextView" />
-
-        <View
-            android:id="@+id/commentIcon"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginEnd="2dp"
-            android:background="@drawable/ic_comment_24"
-            app:layout_constraintBottom_toBottomOf="@id/commentCountTextView"
-            app:layout_constraintEnd_toStartOf="@+id/commentCountTextView"
-            app:layout_constraintTop_toTopOf="@+id/commentCountTextView" />
-
-        <TextView
-            android:id="@+id/commentCountTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/zero"
@@ -123,6 +100,5 @@
             app:layout_constraintTop_toTopOf="@id/titleTextView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.cardview.widget.CardView>
