- add todo list(해야할 목록 추가) - delete explanatory notes (안쓰는 주석 제거) - add scroll view to community detail view(커뮤니티 디테일 뷰에 스크롤 뷰 추가)

--- a/app/src/main/res/layout/activity_community_detail.xml
+++ b/app/src/main/res/layout/activity_community_detail.xml
@@ -115,23 +115,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateTextView">
 
-        <TextView
-            android:id="@+id/contentsTextView"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="12dp"
-            android:scrollbars="vertical"
-            android:textColor="@color/dark_grey"
-            android:textSize="16sp"
-            app:autoSizeMaxTextSize="20sp"
-            app:autoSizeMinTextSize="14sp"
-            app:autoSizeTextType="uniform"
-            tools:text="제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다.
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/contentsTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="12dp"
+                android:scrollbars="vertical"
+                android:textColor="@color/dark_grey"
+                android:textSize="16sp"
+                app:autoSizeMaxTextSize="20sp"
+                app:autoSizeMinTextSize="14sp"
+                app:autoSizeTextType="uniform"
+                tools:text="제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다.
              제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다.
              제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다.
              제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다.
              제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다.
              제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다." />
+
+        </ScrollView>
 
     </androidx.cardview.widget.CardView>
 
