--- a/app/src/main/res/layout/dialog_body_changes.xml
+++ b/app/src/main/res/layout/dialog_body_changes.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:background="@drawable/rounded_white_dialog">
+    android:layout_gravity="center"
+    android:background="@drawable/rounded_white_dialog"
+    tools:background="@color/main_color_blur">
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/body_changes_after_quitting_smoking"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -27,7 +29,7 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/ic_cancel_24"
         android:backgroundTint="@color/main_color"
         android:gravity="center"
@@ -35,15 +37,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
-        android:layout_width="0dp"
+        android:id="@+id/scrollView"
+        android:layout_width="320dp"
         android:layout_height="400dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/border_grey_color"
         android:orientation="vertical"
-        android:padding="12dp"
+        android:padding="8dp"
         app:layout_constraintBottom_toTopOf="@+id/checkButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -385,13 +388,6 @@
         </LinearLayout>
 
     </ScrollView>
-
-    <!--    <Button-->
-    <!--        android:layout_width="0dp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        android:layout_height="wrap_content" />-->
 
     <LinearLayout
         android:id="@+id/checkButton"
