--- a/app/src/main/res/layout/activity_community.xml
+++ b/app/src/main/res/layout/activity_community.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/default_background"
-    tools:context=".activity.community.CommunityActivity">
+    tools:context=".activitys.community.CommunityActivity">
 
     <TextView
         android:id="@+id/titleTextView"
@@ -162,7 +162,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_id"
+        ads:adUnitId="@string/banner_ad_test_id"
         ads:layout_constraintBottom_toBottomOf="parent"
         ads:layout_constraintEnd_toEndOf="parent"
         ads:layout_constraintStart_toStartOf="parent" />
