--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="@color/default_background"
-    tools:context=".activity.registration.RegistrationActivity">
+    tools:context=".activitys.registration.RegistrationActivity">
 
     <TextView
         android:id="@+id/datePickerTextView"
