--- a/app/src/main/res/layout/activity_community_detail.xml
+++ b/app/src/main/res/layout/activity_community_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activitys.communitydetail.CommunityDetailActivity">
+    tools:context=".ui.community.detail.CommunityDetailActivity">
 
     <View
         android:id="@+id/cancelView"
