- 익명 로그인 기능 추가 - 디자인 변경

--- a/app/src/main/res/layout/activity_community.xml
+++ b/app/src/main/res/layout/activity_community.xml
@@ -4,38 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/default_background"
     tools:context=".screen.main.community.CommunityActivity">
+
+    <View
+        android:id="@+id/viewCancel"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/ic_arrow_back"
+        android:backgroundTint="@color/black"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
         android:text="@string/chat"
-        android:textColor="@color/main_color"
-        android:textSize="24sp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:autoSizeMaxTextSize="26sp"
-        app:autoSizeMinTextSize="20sp"
-        app:autoSizeTextType="uniform"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/viewCancel"
+        app:layout_constraintTop_toTopOf="@+id/viewCancel" />
 
     <TextView
         android:id="@+id/descriptionTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/warning_description"
-        android:textColor="@color/dark_grey"
+        android:textColor="@color/main_color"
         android:textSize="12sp"
-        app:autoSizeMaxTextSize="13sp"
-        app:autoSizeMinTextSize="11sp"
-        app:autoSizeTextType="uniform"
         app:layout_constraintEnd_toStartOf="@+id/categoryCardView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
@@ -44,7 +49,7 @@
         android:id="@+id/categoryCardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="16dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="2dp"
         app:layout_constraintBottom_toBottomOf="@+id/descriptionTextView"
@@ -62,64 +67,19 @@
 
     </androidx.cardview.widget.CardView>
 
-    <View
-        android:id="@+id/cancelView"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/ic_cancel"
-        android:backgroundTint="@color/main_color"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/noticeTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/bg_main_rounded_12"
-        android:drawablePadding="6dp"
-        android:gravity="center_vertical"
-        android:paddingHorizontal="8dp"
-        android:paddingVertical="2dp"
-        android:text="공지사항"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:autoSizeMaxTextSize="16sp"
-        app:autoSizeMinTextSize="12sp"
-        app:autoSizeTextType="uniform"
-        app:drawableStartCompat="@drawable/ic_report"
-        app:drawableTint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
-        tools:visibility="visible" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_margin="16dp"
         android:orientation="vertical"
-        android:scrollbarDefaultDelayBeforeFade="500000"
-        android:scrollbarSize="5dp"
-        android:scrollbarThumbVertical="@drawable/bg_main_blur_rounded_32"
-        android:scrollbars="vertical"
+        android:scrollbars="none"
         android:visibility="invisible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/writeButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/noticeTextView"
-        app:layout_goneMarginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
         tools:listitem="@layout/item_community"
         tools:visibility="visible" />
 
@@ -131,8 +91,7 @@
         android:gravity="center"
         android:text="@string/no_data"
         android:textColor="@color/white"
-        android:textSize="28sp"
-        android:textStyle="bold"
+        android:textSize="26sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="@id/recyclerView"
@@ -144,15 +103,13 @@
         android:id="@+id/writeButton"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_margin="24dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="8dp"
         android:gravity="center"
         android:text="@string/write_post"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        app:autoSizeMaxTextSize="16sp"
-        app:autoSizeMinTextSize="14sp"
-        app:autoSizeTextType="uniform"
-        app:cornerRadius="8dp"
+        app:cornerRadius="16dp"
         app:layout_constraintBottom_toTopOf="@+id/adView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -162,7 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_id"
+        ads:adUnitId="@string/banner_ad_test_id"
         ads:layout_constraintBottom_toBottomOf="parent"
         ads:layout_constraintEnd_toEndOf="parent"
         ads:layout_constraintStart_toStartOf="parent" />
