--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -5,23 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    android:background="@color/white"
+    android:background="@drawable/bg_white_rounded_12"
     android:elevation="4dp"
     android:paddingHorizontal="12dp"
     android:paddingVertical="6dp">
 
     <TextView
         android:id="@+id/writerTextView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="@color/dark_grey"
+        android:textColor="@color/black"
         android:textSize="16sp"
-        app:autoSizeMaxTextSize="20sp"
-        app:autoSizeMinTextSize="16sp"
-        app:autoSizeTextType="uniform"
-        app:layout_constraintEnd_toStartOf="@+id/dateTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="개발자" />
@@ -30,13 +26,11 @@
         android:id="@+id/dateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
+        android:layout_marginStart="6dp"
         android:textSize="12sp"
-        app:autoSizeMaxTextSize="14sp"
-        app:autoSizeMinTextSize="12sp"
-        app:autoSizeTextType="uniform"
-        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/light_grey"
+        app:layout_constraintStart_toEndOf="@+id/writerTextView"
+        app:layout_constraintBaseline_toBaselineOf="@id/writerTextView"
         app:layout_goneMarginEnd="0dp"
         tools:text="2021-09-15 12:15:21" />
 
@@ -55,11 +49,9 @@
         android:id="@+id/commentTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:layout_marginTop="4dp"
         android:textSize="14sp"
-        app:autoSizeMaxTextSize="16sp"
-        app:autoSizeMinTextSize="12sp"
-        app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
