--- a/app/src/main/res/layout/activity_community_detail.xml
+++ b/app/src/main/res/layout/activity_community_detail.xml
@@ -7,145 +7,122 @@
     tools:context=".screen.main.community.detail.CommunityDetailActivity">
 
     <View
-        android:id="@+id/cancelView"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:id="@+id/viewCancel"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/ic_cancel"
-        android:backgroundTint="@color/main_color"
+        android:background="@drawable/ic_arrow_back"
+        android:backgroundTint="@color/black"
         android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/writerTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:textColor="@color/dark_grey"
-        android:textSize="18sp"
-        app:autoSizeMaxTextSize="22sp"
-        app:autoSizeMinTextSize="16sp"
-        app:autoSizeTextType="uniform"
-        app:layout_constraintEnd_toStartOf="@+id/cancelView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="개발자님이\n작성한 글입니다." />
-
-    <TextView
         android:id="@+id/categoryTextView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:textColor="@color/main_color"
+        android:text="@string/chat"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:autoSizeMaxTextSize="18sp"
-        app:autoSizeMinTextSize="12sp"
-        app:autoSizeTextType="uniform"
-        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
-        app:layout_constraintStart_toStartOf="@+id/writerTextView"
-        app:layout_constraintTop_toBottomOf="@+id/writerTextView"
+        app:layout_constraintBottom_toBottomOf="@+id/viewCancel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/viewCancel"
         tools:text="잡담" />
 
-    <com.google.android.material.button.MaterialButton
+    <View
         android:id="@+id/deleteButton"
-        android:layout_width="60dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="24dp"
-        android:gravity="center"
-        android:text="@string/delete"
-        android:textSize="13sp"
-        android:textStyle="bold"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/ic_delete"
+        android:backgroundTint="@color/main_color"
         android:visibility="gone"
-        app:autoSizeMaxTextSize="14sp"
-        app:autoSizeMinTextSize="13sp"
-        app:autoSizeTextType="uniform"
-        app:cornerRadius="8dp"
-        app:layout_constraintBottom_toBottomOf="@id/categoryTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/categoryTextView"
+        app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="24dp"
-        android:textColor="@color/dark_grey"
-        android:textSize="22sp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:autoSizeMaxTextSize="24sp"
-        app:autoSizeMinTextSize="20sp"
-        app:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/categoryTextView"
-        tools:text="제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다." />
+        tools:text="제목 입니다. 제목 입니다. 제목 입니다." />
 
     <TextView
-        android:id="@+id/dateTextView"
-        android:layout_width="0dp"
+        android:id="@+id/writerTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:gravity="end"
-        android:textColor="@color/light_grey"
-        app:autoSizeMaxTextSize="16sp"
-        app:autoSizeMinTextSize="12sp"
-        app:autoSizeTextType="uniform"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="16dp"
+        android:text="@string/post_warning"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleTextView"
-        tools:text="2021-09-13 09:13:20" />
+        tools:text="개발자님이 작성한 글입니다." />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/contentsCardView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="4dp"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toTopOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateTextView">
+        app:layout_constraintTop_toBottomOf="@+id/writerTextView">
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingHorizontal="12dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="32dp"
+            android:scrollbars="none">
 
             <TextView
                 android:id="@+id/contentsTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="12dp"
                 android:scrollbars="vertical"
                 android:textColor="@color/dark_grey"
                 android:textSize="16sp"
-                app:autoSizeMaxTextSize="20sp"
-                app:autoSizeMinTextSize="14sp"
-                app:autoSizeTextType="uniform"
-                tools:text="제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다.
-             제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다.
-             제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다.
-             제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다.
-             제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다.
-             제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다." />
+                tools:text="제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다. 제목 입니다." />
 
         </ScrollView>
 
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/dateTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        android:elevation="3dp"
+        android:gravity="end"
+        android:textColor="@color/dark_grey"
+        app:layout_constraintBottom_toBottomOf="@+id/contentsCardView"
+        app:layout_constraintEnd_toEndOf="@id/contentsCardView"
+        tools:text="2021-09-13 09:13:20" />
+
+    <TextView
         android:id="@+id/viewCountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_light_grey_rounded_left_top_right_bottom_8"
+        android:background="@drawable/bg_light_grey_rounded_right_top_left_bottom_8"
+        android:backgroundTint="@color/transparent_grey"
         android:drawablePadding="6dp"
         android:elevation="3dp"
         android:gravity="center"
@@ -154,16 +131,15 @@
         app:drawableStartCompat="@drawable/ic_views"
         app:drawableTint="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/contentsCardView"
-        app:layout_constraintEnd_toEndOf="@id/contentsCardView"
+        app:layout_constraintStart_toStartOf="@+id/contentsCardView"
         tools:text="10004" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="24dp"
+        android:layout_height="180dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/bg_main_blur_rounded_12"
         android:orientation="vertical"
@@ -174,6 +150,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contentsCardView"
+        tools:visibility="visible"
         tools:listitem="@layout/item_comment" />
 
     <TextView
@@ -182,14 +159,10 @@
         android:layout_height="0dp"
         android:background="@drawable/bg_main_blur_rounded_12"
         android:gravity="center"
-        android:text="댓글이 없습니다."
+        android:text="@string/no_comment"
         android:textColor="@color/white"
-        android:textSize="22sp"
-        android:textStyle="bold"
+        android:textSize="20sp"
         android:visibility="gone"
-        app:autoSizeMaxTextSize="24sp"
-        app:autoSizeMinTextSize="20sp"
-        app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="@+id/recyclerView"
         app:layout_constraintStart_toStartOf="@+id/recyclerView"
@@ -212,7 +185,7 @@
         android:id="@+id/commentLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
+        android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -221,14 +194,14 @@
             android:id="@+id/commentEditText"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/border_light_grey_2_rounded_16"
-            android:hint="내용을 입력하세요."
+            android:background="@drawable/border_light_grey_rounded_16"
+            android:hint="@string/input_comment"
             android:inputType="textMultiLine"
             android:maxLength="100"
             android:maxLines="2"
             android:paddingStart="12dp"
             android:paddingEnd="48dp"
-            android:textSize="14sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -240,7 +213,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="@drawable/bg_main_rounded_right_12"
-            android:padding="6dp"
+            android:padding="8dp"
             android:src="@drawable/ic_send"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
