--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -7,65 +7,68 @@
     android:backgroundTint="@color/default_background"
     tools:context=".screen.registration.RegistrationActivity">
 
+    <View
+        android:id="@+id/viewCancel"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/ic_arrow_back"
+        android:backgroundTint="@color/black"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/write_post"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/viewCancel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/viewCancel" />
+
     <TextView
         android:id="@+id/sharedTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="40dp"
         android:text="@string/shared_no_smoking_story"
         android:textColor="@color/black"
         android:textStyle="bold"
-        app:autoSizeMaxTextSize="18sp"
-        app:autoSizeMinTextSize="12sp"
-        app:autoSizeTextType="uniform"
-        app:layout_constraintEnd_toStartOf="@+id/cancelView"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/viewCancel" />
 
     <TextView
         android:id="@+id/infoTextView"
         android:layout_width="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/sharedTextView"
-        android:layout_marginStart="24dp"
-        app:autoSizeMaxTextSize="14sp"
-        app:autoSizeMinTextSize="12sp"
-        android:textColor="@color/light_grey"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="4dp"
         android:text="@string/post_warning"
+        android:textColor="@color/main_color"
         android:textSize="12sp"
-        app:autoSizeTextType="uniform"
-        android:layout_marginEnd="24dp"
+        app:autoSizeMaxTextSize="14sp"
+        app:autoSizeMinTextSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_height="wrap_content" />
-
-    <View
-        android:id="@+id/cancelView"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/ic_cancel"
-        android:backgroundTint="@color/main_color"
-        android:elevation="6dp"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/sharedTextView" />
 
     <TextView
         android:id="@+id/categoryTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/set_up_category"
-        android:textColor="@color/dark_grey"
+        android:textColor="@color/black"
         android:textSize="16sp"
-        app:autoSizeMaxTextSize="18sp"
-        app:autoSizeMinTextSize="12sp"
-        app:autoSizeTextType="uniform"
         app:layout_constraintEnd_toStartOf="@id/categoryCardView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/infoTextView" />
@@ -74,7 +77,7 @@
         android:id="@+id/categoryCardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="16dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="1dp"
         app:layout_constraintBottom_toBottomOf="@id/categoryTextView"
@@ -97,9 +100,8 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
         android:hint="@string/input_title"
         android:textColorHint="@color/light_grey"
         app:counterEnabled="true"
@@ -125,10 +127,9 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
         android:hint="@string/input_contents"
         android:textColorHint="@color/light_grey"
         app:counterEnabled="true"
@@ -153,13 +154,10 @@
         android:id="@+id/checkButton"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_margin="24dp"
+        android:layout_margin="16dp"
         android:text="@string/check"
         android:textSize="15sp"
         android:textStyle="bold"
-        app:autoSizeMaxTextSize="18sp"
-        app:autoSizeMinTextSize="12sp"
-        app:autoSizeTextType="uniform"
         app:cornerRadius="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
