--- a/app/src/main/res/layout/dialog_body_change.xml
+++ b/app/src/main/res/layout/dialog_body_change.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -11,41 +10,27 @@
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/body_changes_after_quitting_smoking"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:autoSizeMaxTextSize="18sp"
-        app:autoSizeMinTextSize="12sp"
-        app:autoSizeTextType="uniform"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/cancelView"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/ic_cancel"
-        android:backgroundTint="@color/main_color"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="320dp"
-        android:layout_height="400dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="12dp"
-        android:background="@drawable/border_light_grey_2_rounded_16"
+        android:layout_height="360dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/border_light_grey_rounded_16"
         android:orientation="vertical"
         android:padding="8dp"
+        android:scrollbars="none"
         app:layout_constraintBottom_toTopOf="@+id/checkButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,20 +48,14 @@
                 android:text="@string/twenty_minutes"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/twenty_minutes_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -85,20 +64,14 @@
                 android:text="@string/eight_hours"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/eight_hours_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -107,20 +80,14 @@
                 android:text="@string/twelve_hours"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/twelve_hours_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -129,20 +96,14 @@
                 android:text="@string/one_day"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/one_day_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -151,20 +112,14 @@
                 android:text="@string/two_day"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/two_day_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -173,20 +128,14 @@
                 android:text="@string/three_day"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/three_day_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -195,20 +144,14 @@
                 android:text="@string/one_week"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/one_week_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -217,20 +160,14 @@
                 android:text="@string/two_week"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/two_week_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -239,20 +176,14 @@
                 android:text="@string/one_two_month"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/one_two_month_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -261,20 +192,14 @@
                 android:text="@string/three_month"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/three_month_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -283,20 +208,14 @@
                 android:text="@string/nine_month"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/nine_month_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -305,20 +224,14 @@
                 android:text="@string/one_year"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/one_year_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -327,20 +240,14 @@
                 android:text="@string/five_year"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/five_year_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -349,20 +256,14 @@
                 android:text="@string/ten_year"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/ten_year_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -371,20 +272,14 @@
                 android:text="@string/fifteen_year"
                 android:textColor="@color/main_color"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="22sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="@string/fifteen_year_info"
-                android:textColor="@color/dark_grey"
-                app:autoSizeMaxTextSize="16sp"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeTextType="uniform" />
+                android:textColor="@color/dark_grey" />
         </LinearLayout>
 
     </ScrollView>
@@ -392,7 +287,7 @@
     <LinearLayout
         android:id="@+id/checkButton"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="48dp"
         android:background="@drawable/bg_main_rounded_bottom_16"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -404,7 +299,7 @@
             android:gravity="center"
             android:text="@string/check"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
     </LinearLayout>
